--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
